--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Please Select your favourite Coffee and Country "
+        android:text="Please Select your Country for finding the Popular Coffee"
         android:textColor="#C32F01"
         android:textSize="18dp"
-
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         >
@@ -43,14 +42,7 @@
         android:layout_height="wrap_content">
 
     </Spinner>
-    <Spinner
-        android:id="@+id/CoffeeSpinner"
-        android:theme="@style/mySpinnerItemStyle"
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-    </Spinner>
 <Button
     android:id="@+id/SubmitBtn"
     android:layout_width="wrap_content"
@@ -64,24 +56,11 @@
     >
 </Button>
     <TextView
+        android:id="@+id/popular"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Selected Coffee and Country are : "
         android:textColor="#C32F01"
         android:textSize="18dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        >
-
-    </TextView>
-
-    <TextView
-        android:id="@+id/CountryAndCoffeeText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="18dp"
-        android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         >
